# Medieval-Game

./: .gitignore  FINAL_STATUS.md  FREE_ALTERNATIVES.md  INTEGRATION_COMPLETE.md  NODEJS_SETUP.md  PIPELINE_READY.md  PRODUCTION_READY.md  QUICK_START.md  QUICK_START_FREE.md  README_SPRITE_GENERATION.md  READY_TO_GENERATE.md  SETUP.md  SETUP_HUGGINGFACE.md  SPRITE_STATUS.md  STABILITY_AI_SETUP.md  START_HERE.md  assetsConfigAnimated.mjs  cabal.project  check_sprite_progress.sh  generate_all_assets.py  generate_animated_sprites.mjs  generate_pixel_assets.mjs  generate_pixel_assets.py  generate_single_animation.mjs  generate_with_huggingface.mjs  medieval-siege.cabal  monitor_sprites.sh  optimize_sprites.mjs  package.json  test_api_connection.mjs  test_huggingface.mjs  verify_setup.sh
src/: Assets.hs  Config.hs  Constants.hs  GameLoop.hs  Main.hs  Types.hs
src/AI/: Director.hs  FSM.hs  Pathfinding.hs  ThreatAnalysis.hs
src/Audio/: AudioCore.hs  SoundEvents.hs
src/Input/: InputHandler.hs
src/Physics/: Collision.hs  PhysicsCore.hs  Projectiles.hs
src/Rendering/: PixelArt.hs  RenderDebug.hs  RenderUI.hs  RenderUtils.hs  RenderWorld.hs  SpriteAnimation.hs
src/Systems/: AbilitySystem.hs  CastleSystem.hs  DamageSystem.hs  FortSystem.hs  ResourceSystem.hs  TowerSystem.hs  TrapSystem.hs  WaveSystem.hs
